[tool.poetry]
name = "idxmomentumbot"
version = "0.1.0"
description = ""
authors = ["Nikki Satmaka <30800020+NikkiSatmaka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scipy = "^1.14.0"
ta-lib = "^0.4.31"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
